--- a/Gezenti.Persistence/Gezenti - Backup (3).Persistence.csproj
+++ b/Gezenti.Persistence/Gezenti - Backup (3).Persistence.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
