Mekan güncelleme, silme işlemleri ve DbContext yapılandırması tamamlandı

--- a/Gezenti.Application/Gezenti.Application.csproj
+++ b/Gezenti.Application/Gezenti.Application.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Gezenti.Domain\Gezenti.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Mapping\" />
+  </ItemGroup>
+
 </Project>
