--- a/Gezenti.WebAPI/appsettings.json
+++ b/Gezenti.WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TAKO;Database=GezentiDb;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=mssql02.trwww.com;Database=gezzentiDb;User Id=GezintiDbAdmin;Password=Tubit.2014;TrustServerCertificate=True;Encrypt=False;"
   },
 
   "Jwt": {
