Add email verification and password reset features
Implemented email verification and password reset flows in the authentication system. Updated the User entity and database schema to support verification and reset codes with expiration. Added endpoints for email verification and improved registration, login, and password reset logic. Integrated IMailService for sending verification and reset emails. Enhanced error handling, input trimming, and user feedback. Updated configuration and Swagger docs for improved clarity and security.

--- a/Gezenti.WebAPI/appsettings.Development.json
+++ b/Gezenti.WebAPI/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssql02.trwww.com;Database=gezzentiDb;User Id=GezintiDbAdmin;Password=Tubit.2014;TrustServerCertificate=True;Encrypt=False;"
+  },
+
+  "Jwt": {
+    "Issuer": "Gezenti",
+    "Audience": "Gezenti",
+    "Key": "supersecretkey_supersecretkey_12345",
+    "ExpiresMinutes": 60
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SenderEmail": "info.ev.arkadasim@gmail.com",
+    "SenderPassword": "lujs brjg mojt tuze"
   }
 }
