UserActivity ve MongoDb entegrasyon özelliklerimi ekledim

--- a/Gezenti.Core/Gezenti.Core.csproj
+++ b/Gezenti.Core/Gezenti.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.25.0" />
+    <PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
