--- a/Gezenti.Application/Gezenti.Application.csproj
+++ b/Gezenti.Application/Gezenti.Application.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.25.0" />
+    <PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
