--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,95 @@
-
-appsettings.json
-appsettings.Development.json
-
-
-.vs/
+## .NET Core / Visual Studio
 bin/
 obj/
 *.user
 *.suo
+*.userosscache
+*.sln.docstates
+.vs/
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+## Visual Studio Code
+.vscode/
+
+## Rider
+.idea/
+*.sln.iml
+
+## User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+## Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+## NuGet Packages
+*.nupkg
+*.snupkg
+**/packages/*
+!**/packages/build/
+*.nuget.props
+*.nuget.targets
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+## .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+## Sensitive files - GÜVENLİK İÇİN
+appsettings.json
+appsettings.Development.json
+appsettings.Production.json
+appsettings.*.json
+*.secrets.json
+*.pfx
+*.key
+*.pem
+
+## Connection strings ve API keys içeren dosyalar
+**/appsettings*.json
+!appsettings.example.json
+
+## Environment variables
+.env
+.env.local
+.env.*.local
+
+## OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+## Temporary files
+*.tmp
+*.temp
+*.log
+*.cache
